--- a/Héraldix.css
+++ b/Héraldix.css
@@ -95,6 +95,10 @@ img {
 .img-lettrine-h1[alt = "É"] {margin-top: 0;}
 .img-lettrine-h1[alt = "Ç"],
 .img-lettrine-h1[alt = "Q"] {margin-bottom: -12.5px;}
+.img-lettrine-h1[alt = "I"] {
+	margin-right: -12.5px;
+	margin-left: -12.5px;
+}
 .img-lettrine-h2 {
 	width: 30px;
 	margin-bottom: -1px;
