--- a/Héraldix.css
+++ b/Héraldix.css
@@ -6,7 +6,7 @@
 
 * {
 	text-align: center;
-	font-family: Garamond;
+	font-family: Garamond, Georgia;
 	font-size: 25px;
 	color: #ffffff;
 	border-radius: 20px;
