--- a/Armoirie/Armoirie.css
+++ b/Armoirie/Armoirie.css
@@ -12,7 +12,7 @@
 }
 #div-cri,
 #div-devise {
-	background-image: url("Bannière.png");
+	background-image: url("banniere.png");
 	background-size: 100% 100%;
 	display: inline-block;
 	padding: 25px;
