--- a/listes/listes.css
+++ b/listes/listes.css
@@ -1,12 +1,6 @@
-/* ================================================================================================================= */
-/*                                                                                                                   */
-/*                                                     Héraldix                                                      */
-/*                                                                                                                   */
-/* ================================================================================================================= */
-
 h2:hover {cursor: url("../Curseurs/Main.png"), pointer;}
 
-.img-icône {width: 50px;}
+.icône {width: 50px;}
 
 table {margin: auto;}
 
@@ -15,11 +9,5 @@ th {border: 2px #ffffff solid;}
 
 td,
 th {display: table-cell;}
-.td-vide {background-color: grey;}
-.td-vide:hover {cursor: not-allowed;}
-
-/* ================================================================================================================= */
-/*                                                                                                                   */
-/*                                                     Héraldix                                                      */
-/*                                                                                                                   */
-/* ================================================================================================================= */
+.vide {background-color: grey;}
+.vide:hover {cursor: not-allowed;}
