--- a/armoirie/armoirie.css
+++ b/armoirie/armoirie.css
@@ -1,9 +1,3 @@
-/* ================================================================================================================= */
-/*                                                                                                                   */
-/*                                                     Héraldix                                                      */
-/*                                                                                                                   */
-/* ================================================================================================================= */
-
 #div-couronne {margin-top: 175px;}
 #div-contenu {
 	background-position: center;
@@ -39,28 +33,17 @@ footer {display: none;}
 }
 
 span {text-shadow: 0 0 0;}
-.span-transformer {
+.transformer {
 	background-color: #ffffff;
 	font-family: consolas;
 }
 
 @media print {
 
-	body {width: 1000px;}
+body {width: 1000px;}
 
-	footer {display: block;}
+footer {display: block;}
 
-	header {display: none;}
-
-	#img-logo {
-		margin-bottom: -25px;
-		width: 75px;
-	}
+header {display: none;}
 
 }
-
-/* ================================================================================================================= */
-/*                                                                                                                   */
-/*                                                     Héraldix                                                      */
-/*                                                                                                                   */
-/* ================================================================================================================= */
