--- a/formulaire/formulaire.css
+++ b/formulaire/formulaire.css
@@ -1,9 +1,3 @@
-/* ================================================================================================================= */
-/*                                                                                                                   */
-/*                                                     Héraldix                                                      */
-/*                                                                                                                   */
-/* ================================================================================================================= */
-
 fieldset {
 	width: 750px;
 	margin: auto;
@@ -15,10 +9,4 @@ input[type = "text"] {width: 250px;}
 input[type = "text"]:hover {cursor: url("../Curseurs/Plume.png"), text;}
 
 label {font-weight: bold;}
-.label-filtre {font-style: italic;}
-
-/* ================================================================================================================= */
-/*                                                                                                                   */
-/*                                                     Héraldix                                                      */
-/*                                                                                                                   */
-/* ================================================================================================================= */
+.filtre {font-style: italic;}
