--- a/listes/listes.css
+++ b/listes/listes.css
@@ -1,4 +1,4 @@
-h2:hover {cursor: url("../Curseurs/Main.png"), pointer;}
+h2:hover {cursor: url("../curseurs/pointer.png"), pointer;}
 
 .icône {width: 50px;}
 
